solved a bug: ui border-radius distortions in notification carousel

--- a/src/stylesheets/notificationSection.css
+++ b/src/stylesheets/notificationSection.css
@@ -133,6 +133,7 @@
   overflow: hidden;
   border-radius: 9px;
   position: relative;
+  height: fit-content;
 }
 
 .overlay-left,
